--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:3000
+AUTH_SECRET = M1IXixpIMWBwVWPhieAOlBB3wZG1vAfmqcqMwc845Zc
+NEXT_PUBLIC_API_URL=http://localhost:3001
